[package]
name = "tokio-dns"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
lazy_static = "0.2"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core.git" }
log = "0.3"
