[package]
name = "tokio-dns-unofficial"
version = "0.4.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Unofficial extension to tokio to provide asynchronous DNS resolution"
documentation = "https://docs.rs/tokio-dns-unofficial"
homepage = "https://github.com/sbstp/tokio-dns"
repository = "https://github.com/sbstp/tokio-dns"
readme = "README.md"
keywords = ["tokio", "async", "dns"]
license = "Apache-2.0/MIT"
exclude = [".travis.yml"]
edition = "2018"

[lib]
name = "tokio_dns"
path = "src/lib.rs"

[dependencies]
futures-preview = "0.3.0-alpha.18"
lazy_static = "1.0"
tokio = "0.2.0-alpha.3"
